@@ -140,7 +140,6 @@ fun build args_file = Command_Line.tool0 (fn () =>
           (Options.bool options "browser_info")
           (Path.explode browser_info)
           (Options.string options "document")
-          (Options.bool options "document_graph")
           (Options.string options "document_output")
           (Present.document_variants (Options.string options "document_variants"))
           (map (apply2 Path.explode) document_files)
